# Fast_zero

./: .coverage  Dockerfile  alembic.ini  compose.yaml  database.db  pyproject.toml  requirements.txt
fast_zero/: .env  app.py  models.py  schema.py  security.py
fast_zero/migrations/versions/: 3f5a2ef72fd5_create_users_and_books_tables.py  42362d4ce6f5_create_users_and_books_tables.py  7e051879e6eb_create_users_and_books_tables.py  b825f0eb7b97_create_users_table.py
fast_zero/routers/: users.py
migrations/: env.py
migrations/versions/: e8ff7092ade9_create_users_table.py  ecdbc0198719_create_users_table.py
tests/: .coverage  conftest.py  test_app.py  test_db.py
